[tool.poetry]
name = "pixelator"
version = "0.1.0"
description = ""
authors = ["leylandpaladin <enwind123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "pygame"
numpy = "^1.23.4"
numba = "^0.56.3"
pygame = "^2.1.2"
pylint = "^2.15.5"
flake8 = "^5.0.4"
bandit = "^1.7.4"

[tool.poetry.dev-dependencies]
jedi = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
